examples/appliance/manifests/traefik-tls.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: ssl-redirect
  namespace: kube-system
spec:
  redirectScheme:
    scheme: https
    permanent: true
